# limify

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  req.txt
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
core-concepts/architecture/: index.html
core-concepts/identity-resolution/: index.html
core-concepts/plans/: index.html
core-concepts/rate-format/: index.html
core-concepts/rules/: index.html
docs/: index.md
docs/core-concepts/: architecture.md  configuration.md  identity-resolution.md  plans.md  rate-format.md  rules.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: extension-guide.md  release-guide.md
docs/internals/: algorithms.md  framework-adapters.md  storage-adapters.md
getting-started/quickstart/: index.html
guides/extension-guide/: index.html
guides/release-guide/: index.html
internals/algorithms/: index.html
internals/framework-adapters/: index.html
internals/storage-adapters/: index.html
limify/: __init__.py  config.py  defaults.py  plan_provider.py  types.py  user_rules.py
limify/adapters/fastapi/: context.py  middleware.py
limify/core/: context.py  key_resolver.py  limify.py  limiter.py  path.py  plan_resolver.py  plans.py  rate.py  redis_adapter.py  rules.py
limify/core/algorithms/: base.py  token_bucket.py
limify/core/resolvers/: key_resolver.py  plan_resolver.py  rule_resolver.py
search/: search_index.json
site/: 404.html  index.html
site/core-concepts/configuration/: index.html
site/getting-started/installation/: index.html
site/search/: search_index.json
tests/: test_plan_resolver.py  test_rule_resolver.py
tests/algorithms/: test_token_bucket.py
tests/core/: test_limiter.py  test_path.py  test_rate.py  test_redis_adapter.py  test_rules.py
tests/resolvers/: test_key_resolver.py  test_plan_resolver.py  test_rule_resolver.py
(+6 files in other folders)
