[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limifyrate"
version = "0.1.4"
description = "Framework-agnostic, Redis-backed rate limiting engine for modern async Python systems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Pedram Aliniaye Asli" }
]

keywords = [
  "rate limiting",
  "redis",
  "async",
  "token bucket",
  "fastapi",
  "starlette",
  "api",
  "microservices",
  "middleware",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Framework :: AsyncIO",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries",
]

# Core runtime deps (framework-agnostic)
dependencies = [
  "redis>=7.0.0",
]

[project.optional-dependencies]
# Install adapter deps only if you use the FastAPI/Starlette middleware (install with: pip install "limify[fastapi]")
fastapi = [
  "starlette>=0.27",
]

# Dev/test dependencies (install with: pip install "limify[dev]")
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/pedram-aliniaye-asli/limify"
Repository = "https://github.com/pedram-aliniaye-asli/limify"
Documentation = "https://github.com/pedram-aliniaye-asli/limify"

[tool.setuptools.packages.find]
include = ["limify*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
